	--ignoredeps and --resolvedeps have now been removed.

	* pykickstart/commands/firewall.py (F9_Firewall):  --high and --medium
	have now been removed.

	* pykickstart/commands/vnc.py (F9_Vnc):  --connect has now been
	removed.

	* pykickstart/commands/xconfig (F9_XConfig):  All the options that
	were moved to the monitor command have now been removed.

2007-10-26  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/logvol.py:  Fix typo in data object name.

	* pykickstart/commands/partition.py (F9_Partition.__init__):  Fix
	typo.

2007-10-26  Peter Jones  <pjones@redhat.com>

	* pykickstart/handlers/control.py:  Use new F9 commands.

2007-10-26  Peter Jones  <pjones@redhat.com>

	* pykickstart/commands/logvol.py:  Add F9 options (--fsprofile).

	* pykickstart/commands/raid.py: ditto.

	* pykickstart/commands/partition.py: ditto.

2007-10-25  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/logvol.py (FC4_LogVol._setClassData):  Fix
	typos in method name and in name of data object.

	* pykickstart/version.py:  Add constants and loading support for F9.

2007-10-24  Peter Jones  <pjones@redhat.com>

	* pykickstart/commands/logvol.py: make all the parse methods
	inheritable, and only define them once.

	* pykickstart/commands/partition.py: ditto.

	* pykickstart/commands/raid.py: ditto.

2007-10-24  Peter Jones  <pjones@redhat.com>

	* pykickstart/handlers/f9.py: new for f9!

	* pykcikstart/handlers/control.py: add F9 stuff.

2007-10-23  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-10-22  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/method.py (FC3_Method._getParser):  Return the
	OptionParser instance on cdrom installs.

2007-10-18  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-10-17  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py:  Don't write out %end to packages and scripts
	if the syntax version is before it was introduced.
